fix: fix flaky tests